# cscr

./: README.md  end_to_end.sh  pyproject.toml
data/: probes_embedllm-192.json  probes_mix_instruct-192.json  probes_routerbench-192.json
experts/: llama2-7b.npy  llama2-7b.tokens.json  ood.json  registry-embedllm.json  registry-mix-instruct.json  registry-routerbench.json  registry.json
scripts/: build_faiss.py  build_umr.py  compute_descriptors.py  compute_descriptors_perplexity.py  generate_probes.py  plot_curves.py  prime_thompson.py  run_audc_eval.py  sanity_check_descriptors.py  train_parametric.py  train_query_encoder.py  tune_softmax_tau.py
src/router/: __init__.py  bandit.py  baselines.py  cost_models.py  descriptors.py  embedllm.py  knn_router.py  mix_instruct.py  oracle_router.py  query_encoder.py  random_router.py  registry.py  routerbench.py  umr.py  utils.py
